# pylso-foam

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
docs/: index.html  theme.css
lit/: architecture.md  testing.md
pylsoFoam/: clean.py  foam.py  utils.py  vector.py
test/: conftest.py  test_foam_run.py  test_map_fields.py
test/cases/c7_coarse/baseCase/system/: blockMeshDict  controlDict
test/cases/c7_fine/baseCase/: run_solver.sh
test/cases/c7_fine/baseCase/0/: U  p
test/cases/c7_fine/baseCase/system/: blockMeshDict  controlDict
test/cases/pitzDaily/system/: controlDict
