[tool.poetry]
name = "pylso-foam"
version = "0.1.0"
description = "Python Large Scale Orchestrator for OpenFOAM computations."
authors = ["Johan Hidding <j.hidding@esciencecenter.nl>"]
license = "Apache 2"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PyFoam = "^2022.9"
numpy = "^1.23.4"
argh = "^0.26.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
mypy = "^0.982"
pytest-cov = "^4.0.0"
pytest-mypy = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
